--- a/README.text
+++ b/README.text
@@ -9,19 +9,22 @@ it easy for designers to rapidly implement and showcase their esolangs.
 History
 -------
 
-The current released version of yoob is 0.2.  It is as it stands before you.
-I decided to release it, in spite of the source being embarassingly bad, so
-that the masses might mock it, and perhaps, in their collective moment of
-weakness, submit patches, or at least actionable flames (note: actionable.)
+The current released version of yoob is 0.3.  There are a few minor UI
+improvements in this version, but the main enhancement is that example
+programs are modelled as proper Java objects, and they support being loaded
+from remote URLs.  This allows esolang implementations which are under one
+license to have example programs which are under another license; this in
+turn allows a few esolang implementations (Ale, Sceql, Qdeql) to be released
+in this distribution without embedded (possibly non-public domain) example
+programs, thus keeping the whole distribution in the public domain.
+
+The previous released version of yoob was 0.2.  I decided to release it,
+in spite of the source being embarassingly bad, so that the masses might
+mock it, and perhaps, in their collective moment of weakness, submit patches,
+or at least actionable flames (note: actionable.)
 
 Version 0.1 of yoob was purely a technology preview and was never officially
 released.
-
-What needs to be done most badly in version 0.3 is the ability to load an
-example source from a URL; this will allow several of the esolang
-implementations which I have already written, but have not yet included,
-to be released without embedded (possibly non-public domain) example programs
-and thus uncontentiously and unconfusingly into the public domain.
 
 The API should not be expected to be stable through the 0.x series.
 
